fix alignment errors

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,13 +14,6 @@
   --gray: #F1F1F1;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
   color: var(--foreground);
   background: var(--background);
